# VideoSearch

./: CMakeLists.txt
deploy/: CClient.cpp  CMakeLists.txt  main.cpp
deploy/demo/: CMakeLists.txt  main.cpp
deploy/include/: CClient.cpp  CClient.hpp  CMakeLists.txt  RedisClient.hpp
sample_standalone_app/: Demo.cc  sample_clustering.cc  sample_standalone_app1.cc  wrapper.cc
